[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Player3D/WritingsHandler/WritingsHandler.gd" type="Script" id=1]

[node name="WritingsHandler" type="Node"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 0

[node name="Layers" type="Control" parent="Viewport"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpdateTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
